--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app/index.html",
   "scripts": {
-    "test": "karma start ./app/test/karma.conf.js"
+    "test": "karma start ./test/karma.conf.js"
   },
   "author": "John Kelly",
   "license": "ISC",
