fixed pie chart sizing issues

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 backend/handler/__pycache__
 backend/handler/classifiers/__pycache__
 backend/handler/utils/__pycache__
+backend/test/__pycache__
 handler/classifiers/sentiment_files/
 
 .DS_Store
@@ -8,3 +9,9 @@ handler/classifiers/sentiment_files/
 frontend/node_modules
 frontend/app/vendor
 frontend/app/test/coverage
+
+backend/handler/utils/pickle/
+!backend/handler/utils/pickle/.gitkeep
+
+backend/handler/utils/.cache
+backend/handler/classifiers/.cache
