--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,26 @@ language: python
 
 python:
       - "3.5"
+node_js:
+      - "0.12"
 
 before_script:
   - 'cd backend && pip3 install -r requirements.txt'
-  - 'python3 -m nltk.downloader all'
+  - 'python3 -m nltk.downloader stopwords'
+  - 'python3 -m nltk.downloader punkt'
+  - 'cd ../frontend'
+  - 'npm config set python python2.7'
+  - 'npm install -g gulp'
+  - 'npm install -g bower'
+  - 'npm install -g karma'
+  - 'npm install -g jasmine-core'
+  - 'npm install -g karma-jasmine'
+  - 'npm install -g karma-coverage'
+  - 'npm install -g karma-phantomjs-launcher'
+  - 'npm install angular-mocks'
+  - 'bower install'
+  - 'cd ..'
 
 script:
-  - 'cd backend && python3 test.py'
+  - 'python3 backend/test.py'
+  - 'cd frontend && npm test'
