--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,6 @@ backend/handler/utils/__pycache__
 backend/test/__pycache__
 backend/test/classifiers/__pycache__
 
-handler/classifiers/sentiment_files/
-
-.DS_Store
-
-frontend/node_modules
-frontend/app/vendor
-frontend/app/test/coverage
-
 backend/handler/utils/pickle/*
 !backend/handler/utils/pickle/.gitkeep
 
@@ -20,3 +12,14 @@ backend/handler/classifiers/.cache
 
 backend/test/*.pyc
 backend/handler/*.pyc
+
+backend/handler/classifiers/sentiment_files/*
+!backend/handler/classifiers/sentiment_files/.gitkeep
+
+backend/.cache
+
+.DS_Store
+
+frontend/node_modules
+frontend/app/vendor
+frontend/app/test/coverage
