--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ env:
 before_script:
   - 'cd backend'
   - 'pip3 install -r requirements.txt'
+  - 'pip3 install pytest'
+  - 'pip3 install pytest-cache'
+  - 'pip3 install pytest-pep8'
   - 'python3 -m nltk.downloader stopwords'
   - 'python3 -m nltk.downloader punkt'
   - 'cd ../frontend'
@@ -26,5 +29,6 @@ before_script:
 
 script:
   - 'cd backend && python3 test.py -b'
+  - 'py.test --pep8'
   - 'cd ..'
   - 'cd frontend && npm test'
