--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,13 @@ language: python
 
 python:
       - "3.5"
+
+services:
+  - mongodb
+
 env:
   - NODE_VERSION=4.0.0
+
 before_script:
   - 'cd backend'
   - 'pip3 install -r requirements.txt'
