--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -16,7 +16,8 @@
     "angular": "^1.5.5",
     "angular-route": "^1.5.5",
     "lodash": "4.11.1",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "angular-leaflet-directive": "^0.10.0"
   },
   "resolutions": {
     "angular": "1.5.5"
