--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,10 @@ pymongo==3.4.0
 Flask==0.11.1
 Flask-Cors==3.0.2
 Flask-RESTful==0.3.5
+sklearn==0.0
+spacy==1.5.0
+scipy==0.18.1
+pytrends==3.2.0
+tweepy==3.5.0
+numpy==1.11.2
+pymongo==3.4.0
