--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -10,7 +10,8 @@
             "beforeEach": 1,
             "module": 1,
             "inject": 1,
-            "spyOn": 1
+            "spyOn": 1,
+            "$": 1
       },
       "extends": "eslint:recommended",
       "rules": {
